Bug 115180 - FILESAVE: RTF: Incorrect cell width after RT (in MSO)
Summary: FILESAVE: RTF: Incorrect cell width after RT (in MSO)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, filter:rtf, regression
Depends on:
Blocks:
 
Reported: 2018-01-23 18:51 UTC by Xisco Faulí
Modified: 2018-01-25 14:49 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
comparison MSO 2010 and LibreOffice 6.1 (80.87 KB, image/png)
2018-01-23 18:51 UTC, Xisco Faulí
Details
sample1 (16.54 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-01-23 19:00 UTC, Xisco Faulí
Details
problem with table after RT (4.77 KB, image/png)
2018-01-23 19:15 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-01-23 18:51:59 UTC
Created attachment 139300 [details]
comparison MSO 2010 and LibreOffice 6.1

Steps to reproduce:
1. Open attachment 49531 [details] from bug 39384
2. Save it as .RTF
3. Open the output file and scroll to the bottom.

Observed behaviour: Cell width has been reduced the minimun. See attached image.

Reproduced in

Version: 6.1.0.0.alpha0+
Build ID: de1bb0878fc7d7eb6071ec94d770712648013075
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2018-01-23 19:00:31 UTC
Created attachment 139301 [details]
sample1

Another file where the issue is reproduced but only if the file is open in MSO 2010 after the RT
Comment 2 Xisco Faulí 2018-01-23 19:01:19 UTC Comment hidden (obsolete)
Comment 3 Xisco Faulí 2018-01-23 19:05:56 UTC
Regression introduced by:

author	Mike Kaganski <mike.kaganski@collabora.com>	2017-12-08 17:52:56 +0300
committer	Mike Kaganski <mike.kaganski@collabora.com>	2017-12-11 11:58:24 +0100
commit 0f9a596aa853b4f2beeff25c131246a7b31492a4 (patch)
tree 1145ce12578a21c151510dee03a5aefae9844276
parent 12efb01e38f94992ce746d20d40410229c431225 (diff)
tdf#114333: consider trleft for 1st cell width on import; don't...
... recalculate cell widths by factor pagewidth/tablewidth on export
This makes the import and export symmetrical.

Bisected with: bibisect-linux64-6.1

Adding Cc: to Mike Kaganski
Comment 4 Xisco Faulí 2018-01-23 19:06:54 UTC
attachment 119587 [details] from bug 95033 is also affected if the file is open in MSO Word 2010
Comment 5 Xisco Faulí 2018-01-23 19:15:56 UTC
Created attachment 139302 [details]
problem with table after RT

This also affects the tables after RT -> attachment  98679 [details] from bug 78433

@Mike, Should I report a new issue for this one ?
Comment 6 Mike Kaganski 2018-01-24 12:28:31 UTC
(In reply to Xisco Faulí from comment #5)
> @Mike, Should I report a new issue for this one ?

No need; https://gerrit.libreoffice.org/48501 takes care of all these cases AFAICS.
Comment 7 Xisco Faulí 2018-01-24 12:36:44 UTC
(In reply to Mike Kaganski from comment #6)
> (In reply to Xisco Faulí from comment #5)
> > @Mike, Should I report a new issue for this one ?
> 
> No need; https://gerrit.libreoffice.org/48501 takes care of all these cases
> AFAICS.

Hi Mike,
Thanks for the quick fix.
Ok, once it's merged, I'll test it with all the documents I have here showing the problem. If I find any other, I'll report a different bug then.
Thanks!
Comment 8 Commit Notification 2018-01-25 11:58:23 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d91236ad8fc74e1ec15c39b90660717ebab013ac

tdf#115180: take table base width into account

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2018-01-25 14:48:01 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 5cb225b0b3dbb55fd44899b1fb16bdcfeb866849
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded

@Mike, could you please backport it to 6-0 ?
Comment 10 Xisco Faulí 2018-01-25 14:49:21 UTC
ah, forget it, the other commit is not in 6-0 branch. Thanks for the fix!!