tdf#115180: take table base width into account

Reviewed-on: https://gerrit.libreoffice.org/48501
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit d91236ad8fc74e1ec15c39b90660717ebab013ac)

Change-Id: I4238e6c757499e289193efa3498fb1e68d5f3e9c