sw/qa/extras/rtfexport/rtfexport3.cxx
@@ -80,6 +80,21 @@ DECLARE_RTFEXPORT_TEST(testTdf114333, "tdf114333.rtf")
     CPPUNIT_ASSERT_EQUAL(sal_Int32(8498), getProperty<sal_Int32>(xTable, "Width"));
 }
 
+DECLARE_RTFEXPORT_TEST(testTdf115180, "tdf115180.docx")
+{
+    // On export to RTF, column separator positions were written without taking base width
+    // into account and then arrived huge, ~64000, which resulted in wrong table and cell widths
+
+    sal_Int32 rowWidth = parseDump("/root/page/body/tab/row/infos/bounds", "width").toInt32();
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("Row width", sal_Int32(9360), rowWidth);
+    sal_Int32 cell1Width
+        = parseDump("/root/page/body/tab/row/cell[1]/infos/bounds", "width").toInt32();
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("First cell width", sal_Int32(9142), cell1Width);
+    sal_Int32 cell2Width
+        = parseDump("/root/page/body/tab/row/cell[2]/infos/bounds", "width").toInt32();
+    CPPUNIT_ASSERT_EQUAL_MESSAGE("First cell width", sal_Int32(218), cell2Width);
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
